--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,11 @@ services:
     depends_on:
       - mariadb
       - phpadmin
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://192.168.0.3:8081" ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
   selenoid:
     image: aerokube/selenoid:latest-release
@@ -60,8 +65,10 @@ services:
       dockerfile: Dockerfile
       context:  .
     depends_on:
-      - opencart
-      - selenoid
+      selenoid:
+        condition: service_started
+      opencart:
+        condition: service_healthy
 
 volumes:
   mariadb_data:
